<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="446dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/popUp_etape"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="154dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textEtape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/typEtape"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerEtape"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp" />

            <EditText
                android:id="@+id/commEtape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20dp"
                android:hint="@string/commentaire"
                android:textColor="@color/black"
                android:textColorHint="@color/gris"
                android:textSize="16sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="154dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textParam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/typeParamEtape"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <Spinner
                android:id="@+id/spinnerParam"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp" />

            <EditText
                android:id="@+id/valParam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20dp"
                android:hint="@string/valParam"
                android:textColor="@color/black"
                android:textColorHint="@color/gris"
                android:textSize="16sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRetour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/retour" />

            <Button
                android:id="@+id/btnValider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/valider" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>