<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Accueil">

    <LinearLayout
        android:id="@+id/linearLayout17"
        android:layout_width="296dp"
        android:layout_height="40dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="58dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout16">

        <Button
            android:id="@+id/buttonCoach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/coach" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="303dp"
        android:layout_height="290dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="54dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout15">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_launcher_foreground" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout15"
        android:layout_width="258dp"
        android:layout_height="53dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="77dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="296dp"
        android:layout_height="40dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="58dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout14">

        <Button
            android:id="@+id/buttonAthlete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Athlete" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="297dp"
        android:layout_height="84dp"
        android:visibility="invisible"
        android:id="@+id/layoutmdp"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="56dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout17">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonValiderMDP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/valider" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="43dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/credit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>