<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearLayoutinfos"

    android:background="@color/black">

    <LinearLayout
        android:id="@+id/linearLayout15"
        android:layout_width="0dp"
        android:layout_height="82dp"
        android:layout_marginBottom="1dp"
        android:background="@color/black"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <Button
                android:id="@+id/ButtonCalendrier"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/calendrierblanc"
                android:text="@string/ButtonCalendrier"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <Button
                android:id="@+id/ButtonHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/black"
                android:drawableTop="@drawable/homeblanc"

                android:text="@string/ButtonHome"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <Button
                android:id="@+id/ButtonInfos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/yellow"
                android:drawableTop="@drawable/infonoir"

                android:text="@string/ButtonInfos"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutinfoss"
        android:layout_width="402dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/arrondirfond"

        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/lactualite"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:background="#02FFFFFF"
                android:backgroundTint="#00FFFFFF"
                android:visibility="invisible"
                android:contentDescription="@string/plus"
                app:srcCompat="@drawable/plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/listViewInfos"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="411dp"
        android:layout_height="80dp"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoAppli"
                android:layout_width="111dp"
                android:layout_height="64dp"
                android:layout_gravity="center"

                android:layout_marginTop="5dp"
                app:srcCompat="@mipmap/sportdroidbis" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titreHome"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/infos"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgInfo"
                android:layout_width="113dp"
                android:layout_height="46dp"

                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/profilbleu" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>