<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail_block">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="116dp"
        android:layout_height="66dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titreetape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/etape" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="168dp"
        android:layout_height="57dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Spinner
            android:id="@+id/typeEtape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="167dp"
        android:layout_height="53dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/texteEtape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="169dp"
        android:layout_height="61dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="62dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:id="@+id/titreDuree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/duree" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="155dp"
        android:layout_height="68dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <Spinner
            android:id="@+id/typeDuree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="156dp"
        android:layout_height="87dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/texteDuree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/duree" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="179dp"
        android:layout_height="84dp"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="107dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonvalider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/valider"
            android:onClick="valider"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>