<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="413dp"
        android:layout_height="514dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/valEntrainement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="35dp"
            android:text="type d'entrainement"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/date"
                android:textColor="@color/gris"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:text="@string/heure"
                android:textColor="@color/gris"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/valDate"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:text="val date"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/valHeure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:text="val heure"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/com"
                android:textColor="@color/gris" />

            <TextView
                android:id="@+id/valCom"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:text="commentaire"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/listViewBlock"
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="45dp" />

        <LinearLayout
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lieu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/lieu"
                android:textColor="@color/gris"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/valLieu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:text="val lieu"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:text="@string/ok" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>